<resources>
    <string name="app_name">选题系统</string>

    <string name="app_name_long">毕业设计选题系统</string>
    <string name="splash_code_by">Code By ChrisTian</string>
    <string name="login_hint_no">请输入账号</string>
    <string name="login_hint_pwd">请输入密码</string>
    <string name="login_by_tch">教师登录</string>
    <string name="login_by_stu">学生登录</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender_girl">女</string>
    <string name="gender_boy">男</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="title_info_teacher">教师信息</string>
    <string name="teacher_not_admin">sorry! you are not admin!</string>
    <string name="loading_text">正在加载中~</string>
    <string name="btn_admin_modify">修改</string>
    <string name="state_before">未开始</string>
    <string name="state_start">进行中</string>
    <string name="state_end">已结束</string>
    <string name="admin_reset_time">修改时间</string>
    <string name="admin_cha_kan">选题情况</string>
    <string name="hint_start_time">Begin Time（yyyy-MM-dd HH:mm:ss）</string>
    <string name="hint_end_time">End Time（yyyy-MM-dd HH:mm:ss）</string>
    <string name="hint_time_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_dialog_reset_time">设置时间</string>
    <string name="title_create_project">创建课题</string>
    <string name="title_reset_pwd">修改密码</string>
    <string name="hint_pls_project_name">请输入课题标题</string>
    <string name="hint_pls_project_detail">请输入详情内容</string>
    <string name="create_project">创建课题</string>
    <string name="teacher_project_checking">正在审核中</string>
    <string name="label_project_student">选题</string>
    <string name="hint_project_detail">无内容</string>
    <string name="label_project_teacher">出题</string>
    <string name="menu_settings">设置</string>
    <string name="menu_teacher_my_project">我的出题</string>
    <string name="menu_student_all_project">所有课题</string>
    <string name="menu_student_my_project">我的选题</string>
    <string name="menu_teacher_admin">教务管理</string>
    <string name="title_teacher_admin">教务管理</string>
    <string name="menu_time">选题时间</string>
    <string name="menu_info">关于我们</string>
    <string name="about_us_1">指导老师：郁书好\n学生：田志会</string>
    <string name="about_us_2">努力才有进步，付出才有回报!!!</string>
    <string name="about_us_3">衷心地感谢郁书好老师对我的支持和帮助！</string>
    <string name="reset_pwd">修改密码</string>
    <string name="log_out">退出登陆</string>
    <string name="hint_pls_raw_pwd">请输入原密码</string>
    <string name="hint_pls_new_pwd">请输入新密码</string>
    <string name="hint_pls_new_pwd2">请再次输入新密码</string>
    <string name="title_info_student">学生信息</string>
    <string name="label_project_state">状态</string>
    <string name="label_project_major">专业</string>
</resources>
