<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_project_all"
            android:checked="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_student_all_project"/>

        <item
            android:id="@+id/nav_time"
            android:icon="@drawable/ic_menu_time"
            android:title="@string/menu_time"/>
        <item
            android:id="@+id/nav_student_my_project"
            android:icon="@drawable/ic_menu_admin"
            android:title="@string/menu_student_my_project"/>

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_info"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"/>
    </group>


</menu>
