<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/tv_about_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:gravity="center_horizontal"
        android:text="@string/about_us_1"
        android:textColor="@color/colorText"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_about_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16sp"
        android:text="@string/about_us_3"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:gravity="center_horizontal"
        android:text="@string/about_us_2"
        android:textColor="@color/colorTextColorGray"
        android:textSize="14sp"/>

</RelativeLayout>