<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.chris.pss.activity.LoginActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:text="@string/app_name_long"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/ll_login_box"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_below="@id/tv_app_name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="48dp"
        android:background="@mipmap/bg_login_box"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/et_no"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_hint_no"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/colorTextWhite"
            android:textColorHint="@color/colorTextHintWhite"
            android:textSize="16sp"
            tools:text=""/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_hint_pwd"
                android:inputType="textPassword"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/colorTextWhite"
                android:textColorHint="@color/colorTextHintWhite"
                android:textSize="16sp"
                tools:text=""/>

            <RelativeLayout
                android:id="@+id/rl_eye"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/cb_eye"
                    android:layout_width="20dp"
                    android:layout_height="14dp"
                    android:background="@drawable/bg_show_pwd"
                    android:button="@null"
                    android:clickable="false"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_tch"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/ll_login_box"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_selector"
        android:text="@string/login_by_tch"
        android:textColor="@color/colorTextWhite"
        android:textSize="18sp"/>


    <Button
        android:id="@+id/btn_login_stu"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/btn_login_tch"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_login_selector"
        android:text="@string/login_by_stu"
        android:textColor="@color/colorTextWhite"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_code_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/splash_code_by"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"/>
</RelativeLayout>
