<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_project_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_ripple"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/tv_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        tools:text="这是一个标题,这是一个标题,这是一个标题,这是一个标题"/>

    <RelativeLayout
        android:id="@+id/rl_project_major_star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_project_name"
        android:layout_marginTop="4dp">


        <LinearLayout
            android:id="@+id/ll_project_major"
            style="@style/LlHoriLabelProject"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_label_project_major"
            >

            <TextView
                style="@style/TvLabelProjectTagName"
                android:text="@string/label_project_major"
                />

            <TextView
                android:id="@+id/tv_project_major"
                style="@style/TvLabelProjectTagValue"
                tools:text="专业"/>

        </LinearLayout>

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/mrb_project_star"
            style="@style/Widget.MaterialRatingBar.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:isIndicator="true"
            android:max="5"
            android:stepSize="1"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_project_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_project_major_star"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_label_project_detail"
        android:paddingBottom="2dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="2dp"
        android:textColor="@color/colorLightGray"
        android:textSize="14sp"
        tools:text="这是一个很长的内容，这是一个很长的内容，这是一个很长的内容，这是一个很长的内容，这是一个很长的内容，这是一个很长的内容"/>

    <LinearLayout
        android:id="@+id/ll_project_teacher"
        style="@style/LlHoriLabelProject"
        android:layout_below="@id/tv_project_detail"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_label_project_teacher"
        >

        <TextView
            style="@style/TvLabelProjectTagName"
            android:text="@string/label_project_teacher"
            />

        <TextView
            android:id="@+id/tv_project_teacher"
            style="@style/TvLabelProjectTagValue"
            tools:text="明明/职称"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_project_student"
        style="@style/LlHoriLabelProject"
        android:layout_below="@id/ll_project_teacher"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_label_project_student"
        >

        <TextView
            style="@style/TvLabelProjectTagName"
            android:text="@string/label_project_student"
            />

        <TextView
            android:id="@+id/tv_project_student"
            style="@style/TvLabelProjectTagValue"
            tools:text="明明/职称"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_project_checking"
        style="@style/LlHoriLabelProject"
        android:layout_below="@id/ll_project_student"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_label_project_checking"
        >

        <TextView
            style="@style/TvLabelProjectTagName"
            android:text="@string/label_project_state"
            />

        <TextView
            style="@style/TvLabelProjectTagValue"
            android:text="@string/teacher_project_checking"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_project_check"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_item_ripple"
        android:padding="8dp"
        android:src="@drawable/ic_project_check"/>
</RelativeLayout>