<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_project_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_ripple"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="4dp">

    <TextView
        android:id="@+id/tv_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="这是一个标题,这是一个标题,这是一个标题,这是一个标题"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tv_project_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/hint_project_detail"
            android:textColor="@color/colorTextColorGray"
            android:textSize="14sp"
            tools:text="专业"/>

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/mrb_project_star"
            style="@style/Widget.MaterialRatingBar.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:max="5"
            android:stepSize="1"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_project_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorTextColorGray"
        android:textSize="14sp"
        tools:text="这是一个很长的内容，这是一个很长的内容，这是一个很长的内容，这是一个很长的内容，这是一个很长的内容，这是一个很长的内容"/>


    <TextView
        android:id="@+id/tv_project_checking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/teacher_project_checking"
        android:textColor="@color/colorChecking"
        android:textSize="14sp"/>


    <LinearLayout
        android:id="@+id/ll_project_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_project_student"
            android:textColor="@color/colorTextColorGray"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_project_stu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            tools:text="明明/201301"/>
    </LinearLayout>


</LinearLayout>